# DRA_training

./: .env.example  .gitignore  EVAL_PLAN.md  PLAN.md  README.md  pyproject.toml  requirements.txt
analysis/: corpus_analysis.py
experiments/: dra_inference.py  run_dra_inference.py
experiments/configs/: default.yaml
scripts/: run_dra_inference.sh  run_index_builder.sh
src/controller_component/: __init__.py  _loader.py  controller.py  controller_policies.py  generators.py  signals.py  types.py
src/corpus_dataset/: dataset.py  download_browsecomp_plus.py  download_neuclir_dataset.py  ranking_results.py
src/deep_research_agents/: __init__.py
src/evaluation/: __init__.py  accuracy_evaluator.py  citation_evaluator.py  controller_evaluator.py  efficiency_tracker.py  generation_evaluator.py  latency_tracker.py  per_search_analysis.py  retrieval_evaluation.py  runner.py  tracker_evaluator.py  trajectory_evaluator.py
src/indexing/: index_builder.py  index_builder_test.py
src/indexing_corpus_dataset/: __init__.py  dataset_loaders.py  download_datasets.py  index_builder.py  index_builder_test.py  index_config.py  layout.py
src/llm_utils/: __init__.py  (+2 more)
utils/: cli_setup.py  config.py  eval_utils.py  io_utils.py  llm_client.py  pipeline.py  ranking_results.py  text_utils.py  token_meter.py  vllm_manager.py
vllm_server_scripts/: serve_cpm_explore.sh  serve_cpm_report.sh  serve_glm.sh  serve_gpt_oss.sh  serve_judge_qwen3.sh  serve_qwen3_pointwise_reranker.sh  serve_qwen3_reranker.sh  serve_rank1.sh  serve_rank_r1.sh  serve_rankzephyr.sh  serve_tongyi.sh
(+152 files in other folders)
